--- a/DemoMarketPlace.Mvc/Views/_ViewImports.cshtml
+++ b/DemoMarketPlace.Mvc/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DemoMarketPlace.Mvc
 @using DemoMarketPlace.Mvc.Models
+@using DemoMarketPlace.Mvc.DTO
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
