--- a/DemoMarketPlace.Mvc/Views/Product/Index.cshtml
+++ b/DemoMarketPlace.Mvc/Views/Product/Index.cshtml
@@ -13,7 +13,7 @@
     }
 </style>
 
-<a class="btn btn-primary" asp-controller="Product" asp-action="AddProduct">Yeni Ürün Ekle</a>
+<a class="btn btn-primary" asp-controller="Product" asp-action="AddProducts">Yeni Ürün Ekle</a>
 <br />
 <br />
 
