--- a/DemoMarketPlace.Mvc/Views/Shared/_Layout.cshtml
+++ b/DemoMarketPlace.Mvc/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Category" asp-action="Home">Kategori Listesi</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Urunler">Ürünler</a>
+                        </li>
                     </ul>
                 </div>
             </div>
