--- a/DemoMarketPlace.Mvc/Views/Product/AddProducts.cshtml
+++ b/DemoMarketPlace.Mvc/Views/Product/AddProducts.cshtml
@@ -1,19 +1,56 @@
 ﻿
 @model ProductAddViewModel
-@{
-}
 
-<form asp-action="AddProducts" method="post">
-    Ürün Adı: <input type="text" asp-for="ProductName" /><br />
-    Tedarikçi:
-    <select asp-for="SupplierID" asp-items="@Model.SupplierList"></select><br />
-    Kategori:
-    <select asp-for="CategoryID" asp-items="@Model.CategoryList"></select><br />
-    Birim Bazlı Miktar: <input type="text" asp-for="QuantityPerUnit" /><br />
-    Birim Fiyatı: <input type="text" asp-for="UnitPrice" /><br />
-    Stok Miktarı: <input type="text" asp-for="UnitsInStock" /><br />
-    Sipariş Verilen Miktar: <input type="text" asp-for="UnitsOnOrder" /><br />
-    Kritik Stok Sayısı: <input type="text" asp-for="ReorderLevel" /><br />
-    <input type="checkbox" /> Durdurulmuş Ürün<br />
-    <input type="submit" value="Ekle" />
-</form>
+<div class="row">
+    <div class="col-md-6">
+        <form asp-action="AddProducts" method="post">
+
+            <div class="form-group">
+                <label>Ürün Adı:</label>
+                <input class="form-control" type="text" asp-for="ProductName" /><br />
+            </div>
+
+            <div class="form-group">
+                <label>Tedarikçi Seçiniz:</label>
+                <select class="form-control" asp-for="SupplierID" asp-items="@Model.SupplierList"></select>
+            </div>
+
+            <div class="form-group">
+                <label>Kategori Seçiniz:</label>
+               <select class="form-control" asp-for="CategoryID" asp-items="@Model.CategoryList"></select>
+            </div>
+
+            <div class="form-group">
+                <label>Birim Bazlı Miktar:</label>
+                <input class="form-control" type="text" asp-for="QuantityPerUnit" />
+            </div>
+
+            <div class="form-group">
+                <label>Birim Fiyatı:</label>
+                <input class="form-control" type="text" asp-for="UnitPrice" />
+            </div>
+
+            <div class="form-group">
+                <label>Stok Miktarı: </label>
+                <input class="form-control" type="text" asp-for="UnitsInStock" />
+            </div>
+
+            <div class="form-group">
+                <label>Sipariş Verilen Miktar: </label>
+                <input class="form-control" type="text" asp-for="UnitsOnOrder" />
+            </div>
+
+            <div class="form-group">
+                <label>Kritik Stok Sayısı: </label>
+                <input class="form-control" type="text" asp-for="ReorderLevel" />
+            </div>
+
+            <div class="form-group">
+                <input class="form-check-input" type="checkbox" /> Durdurulmuş Ürün
+            </div>
+
+            <div class="form-group">
+                <input type="submit" value="Ekle" class="btn-primary" />
+            </div>
+        </form>
+    </div>
