--- a/DemoMarketPlace.Mvc/Views/Product/Urunler.cshtml
+++ b/DemoMarketPlace.Mvc/Views/Product/Urunler.cshtml
@@ -1,32 +1,23 @@
 ﻿@model List<ProductListDTO>
-@{
-    Layout = null;
-}
-
-<style>
-    table:nth-child(even) tr:nth-child(even) {
-        background-color: #dddddd;
-    }
-
-    tr td:not(:first-child) {
-        padding-left: 10px;
-    }
-</style>
 
 <a class="btn btn-primary" asp-controller="Product" asp-action="AddProducts">Yeni Ürün Ekle</a>
 <br />
 <br />
 
-<table cellspacing="0">
-    <tr>
-        <td>Ürün Id</td>
-        <td>Ürün Adı</td>
-    </tr>
-    @foreach (var item in Model)
-    {
+<table class="table table-striped">
+    <thead>
         <tr>
-            <td>@item.ProductID</td>
-            <td>@item.ProductName</td>
+            <th>Ürün Id</th>
+            <th>Ürün Adı</th>
         </tr>
-    }
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.ProductID</td>
+                <td>@item.ProductName</td>
+            </tr>
+        }
+    </tbody>
 </table>
